--- a/src/main/resources/project-local.yml
+++ b/src/main/resources/project-local.yml
@@ -11,3 +11,5 @@ swarm:
 store:
   service:
     url: http://mock.store.service
+    freelancer-url: http://freelancer-service-mosuke5-dev.apps.na311.openshift.opentlc.com
+    project-url: http://project-service-mosuke5-dev.apps.na311.openshift.opentlc.com
