--- a/etc/project-defaults.yml
+++ b/etc/project-defaults.yml
@@ -1,5 +1,3 @@
-store:
-  service:
-    url: http://store-service-mosuke5-dev.apps.na311.openshift.opentlc.com
-    freelancer-url: http://freelancer-service-mosuke5-dev.apps.na311.openshift.opentlc.com
-    project-url: http://project-service-mosuke5-dev.apps.na311.openshift.opentlc.com
+freelancer4j:
+  freelancer-url: http://freelancer-service-mosuke5-dev.apps.na311.openshift.opentlc.com
+  project-url: http://project-service-mosuke5-dev.apps.na311.openshift.opentlc.com
